--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ gap: 10px;
     font-size: 25px;
     font-weight: 400;
     color: #00000000;
+    width: 100%;
+    height: 100%;
     
 }
 .gameBtns:hover{
