--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 body{
     width: 100%;
     height: 100vh;
-    background-color: #1d3557;
+    background:url(https://images.pexels.com/photos/220053/pexels-photo-220053.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+    backdrop-filter: blur(10px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,7 +23,11 @@ flex-direction: column;
 justify-content: start;
 align-items: center;
 gap: 10px;
+width: 50%;
+height: 80vh;
+backdrop-filter: blur(10px);
 }
+
 
 .container .gametitle{
     color: #e95a66f7;
@@ -39,6 +44,7 @@ gap: 10px;
  grid-template-rows: repeat(3,1fr);   
  grid-template-columns: repeat(3,1fr);
  grid-gap: 10px;   
+ height: 50vh;
  
 }
 
@@ -113,3 +119,17 @@ gap: 10px;
     background-color: #475467;
 }
 /* In JS changes */
+
+
+
+@media  screen and (max-width : 900px) {
+   .container{
+    width: 95%;
+   }
+   .turnShow{
+    font-size: 30px;
+   }
+   .resetBtn{
+    font-size: 30px;
+   }
+}
